# obs

./: CLAUDE.md  Cargo.toml  README.md  tauri.conf.json
.github/workflows/: release.yml
icons/: icon.icns
overlay/: composite.html  dock.html
overlay/assets/: overlay.css  overlay.js
src/: cloud.rs  config.rs  display.rs  lib.rs  main.rs  models.rs  server.rs  state.rs
ui/: index.html
